Get build working and add model download gradle task